style: format imports across multiple files