@@ -19,6 +19,7 @@
 package com.arcadedb.server.ha.raft;
 
 import com.arcadedb.server.ServerException;
+
 import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -53,9 +54,9 @@ class RaftHAServerAddressParsingTest {
   void fivePartsParsesHttpsPort() {
     // host:raftPort:httpPort:priority:httpsPort
     final var parsed = RaftPeerAddressResolver.parsePeerList("myhost:2434:2480:7:2490", 2434);
-    final var peerId = parsed.peers().get(0).getId();
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("myhost:2434");
-    assertThat(parsed.peers().get(0).getPriority()).isEqualTo(7);
+    final var peerId = parsed.peers().getFirst().getId();
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("myhost:2434");
+    assertThat(parsed.peers().getFirst().getPriority()).isEqualTo(7);
     assertThat(parsed.httpAddresses()).containsEntry(peerId, "myhost:2480");
     assertThat(parsed.httpsAddresses()).containsEntry(peerId, "myhost:2490");
   }
@@ -63,7 +64,7 @@ class RaftHAServerAddressParsingTest {
   @Test
   void namedFivePartsParsesHttpsPort() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("alpha@myhost:2434:2480:0:2490", 2434);
-    final var peerId = parsed.peers().get(0).getId();
+    final var peerId = parsed.peers().getFirst().getId();
     assertThat(parsed.httpsAddresses()).containsEntry(peerId, "myhost:2490");
     assertThat(parsed.peerNames()).containsEntry(peerId, "alpha");
   }
@@ -77,7 +78,7 @@ class RaftHAServerAddressParsingTest {
   @Test
   void objectFormFullParsesAllFields() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("myhost:{raft:2434,http:2480,https:2490,priority:10}", 2434);
-    final var peer = parsed.peers().get(0);
+    final var peer = parsed.peers().getFirst();
     assertThat(peer.getAddress()).isEqualTo("myhost:2434");
     assertThat(peer.getPriority()).isEqualTo(10);
     assertThat(parsed.httpAddresses()).containsEntry(peer.getId(), "myhost:2480");
@@ -88,7 +89,7 @@ class RaftHAServerAddressParsingTest {
   void objectFormFieldsAreUnorderedAndOptional() {
     // https omitted, fields out of order, whitespace tolerated
     final var parsed = RaftPeerAddressResolver.parsePeerList("myhost:{ priority: 5 , http: 2480 , raft: 2434 }", 2434);
-    final var peer = parsed.peers().get(0);
+    final var peer = parsed.peers().getFirst();
     assertThat(peer.getAddress()).isEqualTo("myhost:2434");
     assertThat(peer.getPriority()).isEqualTo(5);
     assertThat(parsed.httpAddresses()).containsEntry(peer.getId(), "myhost:2480");
@@ -98,14 +99,14 @@ class RaftHAServerAddressParsingTest {
   @Test
   void objectFormRaftDefaultsToDefaultPort() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("myhost:{http:2480}", 9999);
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("myhost:9999");
-    assertThat(parsed.httpAddresses()).containsEntry(parsed.peers().get(0).getId(), "myhost:2480");
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("myhost:9999");
+    assertThat(parsed.httpAddresses()).containsEntry(parsed.peers().getFirst().getId(), "myhost:2480");
   }
 
   @Test
   void objectFormWithNamePrefix() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("frankfurt@db1:{raft:2434,http:2480,https:2490}", 2434);
-    final var peer = parsed.peers().get(0);
+    final var peer = parsed.peers().getFirst();
     assertThat(peer.getAddress()).isEqualTo("db1:2434");
     assertThat(parsed.peerNames()).containsEntry(peer.getId(), "frankfurt");
     assertThat(parsed.httpsAddresses()).containsEntry(peer.getId(), "db1:2490");
@@ -116,9 +117,9 @@ class RaftHAServerAddressParsingTest {
     final var parsed = RaftPeerAddressResolver.parsePeerList(
         "host1:{raft:2434,http:2480,https:2490},host2:2434:2480", 2434);
     assertThat(parsed.peers()).hasSize(2);
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("host1:2434");
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("host1:2434");
     assertThat(parsed.peers().get(1).getAddress()).isEqualTo("host2:2434");
-    assertThat(parsed.httpsAddresses()).containsEntry(parsed.peers().get(0).getId(), "host1:2490");
+    assertThat(parsed.httpsAddresses()).containsEntry(parsed.peers().getFirst().getId(), "host1:2490");
     assertThat(parsed.httpsAddresses()).doesNotContainKey(parsed.peers().get(1).getId());
   }
 
@@ -152,7 +153,7 @@ class RaftHAServerAddressParsingTest {
   @Test
   void objectFormEmptyBracesUsesDefaults() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("myhost:{}", 2434);
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("myhost:2434");
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("myhost:2434");
     assertThat(parsed.httpAddresses()).isEmpty();
     assertThat(parsed.httpsAddresses()).isEmpty();
   }
@@ -173,7 +174,7 @@ class RaftHAServerAddressParsingTest {
   void singleNodeCluster() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("myhost:2434:2480", 2434);
     assertThat(parsed.peers()).hasSize(1);
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("myhost:2434");
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("myhost:2434");
     assertThat(parsed.httpAddresses()).hasSize(1);
   }
 
@@ -189,7 +190,7 @@ class RaftHAServerAddressParsingTest {
   void leadingWhitespaceInEntryTrimmed() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("  host1:2434 , host2:2435 ", 2434);
     assertThat(parsed.peers()).hasSize(2);
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("host1:2434");
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("host1:2434");
     assertThat(parsed.peers().get(1).getAddress()).isEqualTo("host2:2435");
   }
 
@@ -203,22 +204,22 @@ class RaftHAServerAddressParsingTest {
   void namedSinglePart() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("alpha@myhost", 2434);
     assertThat(parsed.peers()).hasSize(1);
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("myhost:2434");
-    assertThat(parsed.peerNames()).containsEntry(parsed.peers().get(0).getId(), "alpha");
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("myhost:2434");
+    assertThat(parsed.peerNames()).containsEntry(parsed.peers().getFirst().getId(), "alpha");
   }
 
   @Test
   void namedTwoParts() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("alpha@myhost:2434", 2434);
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("myhost:2434");
-    assertThat(parsed.peerNames()).containsEntry(parsed.peers().get(0).getId(), "alpha");
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("myhost:2434");
+    assertThat(parsed.peerNames()).containsEntry(parsed.peers().getFirst().getId(), "alpha");
   }
 
   @Test
   void namedThreeParts() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("alpha@myhost:2434:2480", 2434);
-    final var peerId = parsed.peers().get(0).getId();
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("myhost:2434");
+    final var peerId = parsed.peers().getFirst().getId();
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("myhost:2434");
     assertThat(parsed.httpAddresses()).containsEntry(peerId, "myhost:2480");
     assertThat(parsed.peerNames()).containsEntry(peerId, "alpha");
   }
@@ -226,9 +227,9 @@ class RaftHAServerAddressParsingTest {
   @Test
   void namedFourParts() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("alpha@myhost:2434:2480:5", 2434);
-    final var peerId = parsed.peers().get(0).getId();
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("myhost:2434");
-    assertThat(parsed.peers().get(0).getPriority()).isEqualTo(5);
+    final var peerId = parsed.peers().getFirst().getId();
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("myhost:2434");
+    assertThat(parsed.peers().getFirst().getPriority()).isEqualTo(5);
     assertThat(parsed.httpAddresses()).containsEntry(peerId, "myhost:2480");
     assertThat(parsed.peerNames()).containsEntry(peerId, "alpha");
   }
@@ -239,7 +240,7 @@ class RaftHAServerAddressParsingTest {
         "alpha@host1:2434,host2:2435,gamma@host3:2436", 2434);
     final var peers = parsed.peers();
     assertThat(peers).hasSize(3);
-    assertThat(parsed.peerNames()).containsEntry(peers.get(0).getId(), "alpha");
+    assertThat(parsed.peerNames()).containsEntry(peers.getFirst().getId(), "alpha");
     assertThat(parsed.peerNames()).doesNotContainKey(peers.get(1).getId());
     assertThat(parsed.peerNames()).containsEntry(peers.get(2).getId(), "gamma");
   }
@@ -261,7 +262,7 @@ class RaftHAServerAddressParsingTest {
   @Test
   void whitespaceAroundPeerNameTrimmed() {
     final var parsed = RaftPeerAddressResolver.parsePeerList(" alpha @host:2434", 2434);
-    assertThat(parsed.peerNames()).containsEntry(parsed.peers().get(0).getId(), "alpha");
+    assertThat(parsed.peerNames()).containsEntry(parsed.peers().getFirst().getId(), "alpha");
   }
 
   @Test
@@ -274,7 +275,7 @@ class RaftHAServerAddressParsingTest {
   void namedPeerIdStillUsesAddressFormat() {
     // Peer ID is derived from the address, NOT the name - this preserves Ratis identity stability
     final var parsed = RaftPeerAddressResolver.parsePeerList("alpha@myhost:9999", 2434);
-    assertThat(parsed.peers().get(0).getId().toString()).isEqualTo("myhost_9999");
+    assertThat(parsed.peers().getFirst().getId().toString()).isEqualTo("myhost_9999");
   }
 
   // --- Issue #4838: HA_K8S_DNS_SUFFIX must be applied to peer addresses, not only to the self host ---
@@ -284,7 +285,7 @@ class RaftHAServerAddressParsingTest {
     // Short pod names with a K8s DNS suffix must be expanded to the cluster-internal FQDN so peers resolve.
     final var parsed = RaftPeerAddressResolver.parsePeerList(
         "arcadedb-0:2434:2480,arcadedb-1:2434:2480", 2434, ".arcadedb.default.svc.cluster.local");
-    final var peer0 = parsed.peers().get(0);
+    final var peer0 = parsed.peers().getFirst();
     final var peer1 = parsed.peers().get(1);
     assertThat(peer0.getAddress()).isEqualTo("arcadedb-0.arcadedb.default.svc.cluster.local:2434");
     assertThat(peer1.getAddress()).isEqualTo("arcadedb-1.arcadedb.default.svc.cluster.local:2434");
@@ -297,7 +298,7 @@ class RaftHAServerAddressParsingTest {
     // The peer ID is derived from the (now-qualified) Raft address.
     final var parsed = RaftPeerAddressResolver.parsePeerList(
         "arcadedb-0:2434:2480", 2434, ".arcadedb.default.svc.cluster.local");
-    assertThat(parsed.peers().get(0).getId().toString())
+    assertThat(parsed.peers().getFirst().getId().toString())
         .isEqualTo("arcadedb-0.arcadedb.default.svc.cluster.local_2434");
   }
 
@@ -305,7 +306,7 @@ class RaftHAServerAddressParsingTest {
   void k8sSuffixAppendedInObjectFormAndToHttps() {
     final var parsed = RaftPeerAddressResolver.parsePeerList(
         "arcadedb-0:{raft:2434,http:2480,https:2490}", 2434, ".svc.local");
-    final var peer = parsed.peers().get(0);
+    final var peer = parsed.peers().getFirst();
     assertThat(peer.getAddress()).isEqualTo("arcadedb-0.svc.local:2434");
     assertThat(parsed.httpAddresses()).containsEntry(peer.getId(), "arcadedb-0.svc.local:2480");
     assertThat(parsed.httpsAddresses()).containsEntry(peer.getId(), "arcadedb-0.svc.local:2490");
@@ -316,41 +317,41 @@ class RaftHAServerAddressParsingTest {
     // An operator who already wrote FQDNs must not get the suffix appended twice.
     final var parsed = RaftPeerAddressResolver.parsePeerList(
         "arcadedb-0.svc.local:2434:2480", 2434, ".svc.local");
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("arcadedb-0.svc.local:2434");
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("arcadedb-0.svc.local:2434");
   }
 
   @Test
   void k8sSuffixSkippedForIpLiteral() {
     final var parsed = RaftPeerAddressResolver.parsePeerList(
         "10.0.0.5:2434:2480", 2434, ".svc.local");
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("10.0.0.5:2434");
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("10.0.0.5:2434");
   }
 
   @Test
   void k8sSuffixSkippedForLocalhost() {
     final var parsed = RaftPeerAddressResolver.parsePeerList(
         "localhost:2434:2480", 2434, ".svc.local");
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("localhost:2434");
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("localhost:2434");
   }
 
   @Test
   void emptyK8sSuffixLeavesHostsUnchanged() {
     final var parsed = RaftPeerAddressResolver.parsePeerList(
         "arcadedb-0:2434:2480", 2434, "");
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("arcadedb-0:2434");
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("arcadedb-0:2434");
   }
 
   @Test
   void legacyTwoArgParsePeerListLeavesHostsUnchanged() {
     // The 2-arg overload must behave exactly as before (no suffix).
     final var parsed = RaftPeerAddressResolver.parsePeerList("arcadedb-0:2434:2480", 2434);
-    assertThat(parsed.peers().get(0).getAddress()).isEqualTo("arcadedb-0:2434");
+    assertThat(parsed.peers().getFirst().getAddress()).isEqualTo("arcadedb-0:2434");
   }
 
   @Test
   void objectFormParsesBoltPort() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("myhost:{raft:2434,http:2480,bolt:7687}", 2434);
-    final var peerId = parsed.peers().get(0).getId();
+    final var peerId = parsed.peers().getFirst().getId();
     assertThat(parsed.boltAddresses()).containsEntry(peerId, "myhost:7687");
     assertThat(parsed.httpAddresses()).containsEntry(peerId, "myhost:2480");
   }
@@ -370,7 +371,7 @@ class RaftHAServerAddressParsingTest {
   @Test
   void namedObjectFormParsesBoltPort() {
     final var parsed = RaftPeerAddressResolver.parsePeerList("alpha@myhost:{raft:2434,bolt:7690}", 2434);
-    final var peerId = parsed.peers().get(0).getId();
+    final var peerId = parsed.peers().getFirst().getId();
     assertThat(parsed.boltAddresses()).containsEntry(peerId, "myhost:7690");
     assertThat(parsed.peerNames()).containsEntry(peerId, "alpha");
   }
