@@ -22,6 +22,7 @@ import com.arcadedb.remote.RemoteException;
 import com.arcadedb.test.support.ContainersTestTemplate;
 import com.arcadedb.test.support.DatabaseWrapper;
 import com.arcadedb.test.support.ServerWrapper;
+
 import io.micrometer.core.instrument.Metrics;
 import org.awaitility.Awaitility;
 import org.junit.jupiter.api.AfterEach;
@@ -60,7 +61,7 @@ class ThreeNodesLoadTestIT extends ContainersTestTemplate {
     logger.info("Starting all containers");
     final List<ServerWrapper> servers = startCluster();
 
-    final DatabaseWrapper db1 = new DatabaseWrapper(servers.get(0), idSupplier, wordSupplier);
+    final DatabaseWrapper db1 = new DatabaseWrapper(servers.getFirst(), idSupplier, wordSupplier);
     final DatabaseWrapper db2 = new DatabaseWrapper(servers.get(1), idSupplier, wordSupplier);
     final DatabaseWrapper db3 = new DatabaseWrapper(servers.get(2), idSupplier, wordSupplier);
 
