@@ -21,8 +21,8 @@ package com.arcadedb.server.backup;
 import com.arcadedb.database.Database;
 import com.arcadedb.log.LogManager;
 import com.arcadedb.server.ArcadeDBServer;
-import com.arcadedb.server.event.ServerEventLog;
 import com.arcadedb.server.HAServerPlugin;
+import com.arcadedb.server.event.ServerEventLog;
 
 import java.io.IOException;
 import java.lang.reflect.Constructor;
@@ -30,7 +30,6 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
@@ -176,7 +175,7 @@ public class BackupTask implements Runnable {
     final String backupFileName = databaseName + "-backup-" + timestamp + ".zip";
 
     // Prepare backup directory for this database - use Files.createDirectories to avoid TOCTOU
-    final Path dbBackupPath = Paths.get(backupDirectory, databaseName);
+    final Path dbBackupPath = Path.of(backupDirectory, databaseName);
     try {
       Files.createDirectories(dbBackupPath);
     } catch (final IOException e) {
